# clap-layers

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  deny.toml  test-macro.rs
.github/workflows/: ci.yml  publish.yml
crates/e2e/: Cargo.toml
crates/proc-macro/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/examples/: README.md  cli_only.rs  complete_example.rs  config_file.rs  debug_macro.rs  dynamic_values.rs  environment_vars.rs  precedence_demo.rs  sensitive_data.rs  simple_config.rs
crates/runtime/src/: lib.rs  merge.rs
crates/runtime/tests/: clap_native_env.rs  edge_cases.rs  errors.rs  markers.rs  precedence_matrix.rs  properties.rs  ui.rs
crates/runtime/tests/support/: mod.rs
crates/runtime/tests/ui/: empty_env_prefix.rs  empty_env_prefix.stderr  empty_file_path.rs  empty_file_path.stderr  enum_not_supported.rs  enum_not_supported.stderr  field_with_no_source.rs  field_with_no_source.stderr  file_requires_a_value.rs  file_requires_a_value.stderr  invalid_env_prefix.rs  invalid_env_prefix.stderr  marker_takes_no_value.rs  marker_takes_no_value.stderr  multiple_field_errors.rs  multiple_field_errors.stderr  no_cli_without_arg_skip.rs  no_cli_without_arg_skip.stderr  tuple_struct_not_supported.rs  tuple_struct_not_supported.stderr  union_not_supported.rs  union_not_supported.stderr  unit_struct_not_supported.rs  unit_struct_not_supported.stderr  unknown_container_option.rs  unknown_container_option.stderr  unknown_field_option.rs  unknown_field_option.stderr
docs/: DESIGN.md
examples/: config.toml  quickstart.rs
memory/: docs-quality.md
tests/: Cargo.toml  integration.rs  precedence.rs  precedence_matrix.rs
(+7 files in other folders)
